--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,19 +11,20 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.1.3
-  drift: ^2.4.0
+  drift: ^2.4.2
   sqlite3_flutter_libs: ^0.5.12
   path_provider: ^2.0.11
   path: ^1.8.2
   rxdart: ^0.27.7
   flutter_staggered_grid_view: ^0.6.2
+  animations: ^2.0.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.1
   build_runner: ^2.3.3
-  drift_dev: ^2.4.0
+  drift_dev: ^2.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
